# KnR2E

./: CMakeLists.txt  KnRSE.kdev4  README.md
ex1-23/: README.md  ex1-23_a.c  ex1-23_b.c
